[metadata]
name = jntajis-python
version = 0.0.1
description = JIS converter
long_description = file:README.md
author = Moriyoshi Koizumi <mozo@mozo.jp>
keywords = Unicode, JIS, encoding, conversion, transliteration
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing :: Filters

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools
    wheel
    cython
install_requires =
tests_require =
    pytest
packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    black==21.7b0
    flake8>=3.9.*
    jinja2>=3.*
    mypy>=0.910
    openpyxl>=3.*

[options.package_data]
* =
    py.typed

[options.packages.find]
where = src

[mypy]
files = src/
