[metadata]
name = jntajis-python
description = A fast character conversion and transliteration library based on the scheme defined for Japan National Tax Agency's corporate number system.
url = https://github.com/opencollector/jntajis-python
long_description = file:README.md
long_description_content_type = text/markdown
author = Open Collector, inc.
author_email = <info@opencollector.co.jp>
keywords = Unicode, JIS, encoding, conversion, transliteration, Japanese
license = BSD License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Text Processing :: Filters

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools>=38.6.0
    wheel>=0.31.0
    cython>=0.29.0
    setuptools-scm>=6.*
install_requires =
tests_require =
    pytest
packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    black==21.7b0
    flake8>=3.9.*
    jinja2>=3.*
    mypy>=0.910
    pytest>=6.2.*
    sphinx>=4.*
    sphinx-rtd-theme>=0.5.*

[options.package_data]
* =
    py.typed

[options.packages.find]
where = src

[mypy]
files = src/
